--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
     <script src="./js/script.js" defer></script>
     <title>Live User Filter</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <h4 class="title">Live User Filter</h4>
+        <small class="subtitle">Search by name and/or location</small>
+        <input type="text" id="filter" placeholder="Search" />
+      </header>
+
+      <ul id="result" class="user-list">
+        <li>
+          <h3>Loading...</h3>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
