Filter user by input

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <header class="header">
         <h4 class="title">Live User Filter</h4>
-        <small class="subtitle">Search by name and/or location</small>
+        <small class="subtitle">Search by name, email and/or location</small>
         <input type="text" id="filter" placeholder="Search" />
       </header>
 
